// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabContentHeader renders correctly 1`] = `
<div
  className="tabs__content__header"
/>
`;

exports[`TabContentHeader renders with children 1`] = `
<div
  className="tabs__content__header"
>
  <div>
    My Child
  </div>
</div>
`;
